# AutoMosaic

./: .gitignore  AutoMosaic_仕様書.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  USAGE.md
src/automosaic/: __init__.py  cli.py
src/automosaic/detector/: __init__.py  base.py  mediapipe.py  yolo.py
src/automosaic/mosaic/: __init__.py  styles.py
src/automosaic/processor/: __init__.py  image.py  video.py
src/automosaic/utils/: __init__.py  file_io.py  logger.py
src/automosaic/whitelist/: __init__.py  manager.py
tests/: conftest.py  test_detector.py  test_file_io.py  test_mosaic.py  test_processor.py
